# tiny-demos

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  docker-compose.yml  hello-elixir.ex
.github/: dependabot.yaml  dependabot.yml
FHE/: Cargo.toml
ZKP/: .gitignore  Cargo.toml
ZKP/circom/: Readme.md  build.sh  clean.sh  generate_witness.js  prove.sh  trust.sh  verify.sh
alg/: Cargo.toml
arrow-datafusion/: Cargo.toml
arrow-examples/: Cargo.toml
arrow-examples/src/: main.rs
arroyo/: Cargo.toml
ascii/: Cargo.toml
ascii/src/: lib.rs
axum-example/: Cargo.toml
axum-example/src/: main.rs
axum-gcd/: Cargo.toml
axum-gcd/src/: main.rs
ballista-demos/: Cargo.toml
basic-router/: Cargo.toml
basic-router/src/: lib.rs
binary-tree/: Cargo.toml
block-on/: Cargo.toml
channel-complex/: Cargo.toml
channel-intro/: Cargo.toml
cheapo-request/: Cargo.toml
clock/: Cargo.toml
datafusion-demos/: Cargo.toml
deno/: hello.ts
dl/: .gitignore  README.md  pyproject.toml
dl/src/dl/: auto_grad.py  batch_norm.py  bench.py  block.py  conv1.py  conv2.py  conv3.py  conv4.py  conv_googlenet.py  conv_nin.py  conv_vgg.py  dense_net.py  dropout.py  dropout_torch.py  file.py  gpu.py  lib.py  linreg.py  mlp.py  mlp_torch.py  param.py  param2.py  resnet.py  rnn.py  seq.py  seq_text.py  softmax.py  softmax_torch.py
drl/: pyproject.toml
drl/tests/: lance.py
echo-server/: Cargo.toml
fern-sim/: Cargo.toml
flink-job-operator/: Makefile  PROJECT  go.mod  go.sum  main.go
fusion/: Cargo.toml  Readme.md
g/: go.mod
gap-buffer/: Cargo.toml
generic-queue/: Cargo.toml
get-by-tcp/: Cargo.toml
go-snippet/: build  fixture.go  go.mod  go.sum  iter_test.go  json_test.go  map_test.go  new_test.go  nil_test.go  range_func_test.go  range_test.go  regexp_test.go  run  scan_vs_iter_test.go  slices_test.go  tip_test.go
go118/: go.mod  main.go
go119/: go.mod
go18/: go.mod  main.go
gpui-examples/: Cargo.toml
graph-computing/: Cargo.toml
graph-playground/: Cargo.toml
grep/: Cargo.toml
grpc/: Cargo.toml
guessing_game/: Cargo.toml
hello/: Cargo.toml
hello-actix-web/: .env  Cargo.toml  Readme.md  docker-compose.yml
hello-airwallex/: .gitignore  Readme.md  package.json
hello-elixir/: 01-simple.exs  02-simple-case.exs  03-simple-pattern-matching.ex  04-simple-list-map.ex  04-simple-list-map.exs  Makefile
hello-java/: build.gradle  settings.gradle
hello-k8s/: Readme.md
hello-tokio/: Cargo.toml
hello-tokio-echo-server/: Cargo.toml
hello-wasm/: Cargo.toml  README.md
hexdump/: Cargo.toml
hi-nest/: README.md  datamodel.prisma  docker-compose.yml  package-lock.json  package.json  prisma.yml  tslint.json
hi-prisma2/: docker-compose.yml
http-get/: Cargo.toml
interval/: Cargo.toml
json-macro/: Cargo.toml
julia/: hi.jl
k8/: package.json
kv/: Cargo.toml  README.md
kv_umbrella/: README.md  mix.exs
lean-snippet/: LeanSnippet.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
libgit2-rs/: Cargo.toml
libgit2-rs-safe/: Cargo.toml
loco_candle_inference/: .gitignore  Cargo.toml  README.md
loco_candle_inference/tests/requests/: home.rs
macgen/: Cargo.toml
mandelbrot/: Cargo.toml
many-requests/: Cargo.toml
many-requests-surf/: Cargo.toml
math-snippet/: Cargo.toml
memscan/: Cargo.toml
minigrep/: Cargo.toml
ml/: Cargo.toml
ml2022/: pyproject.toml
ml2022/ml2022/: main.py
multi/: Cargo.toml
mvp-graphql/: Readme.md  package.json  tsconfig.json
nexus-snippet/: Cargo.toml  Readme.md
nodejs18/: package.json  test.mjs
octave/: hi.mat
p/: README.md  pyproject.toml
p/src/p/: __init__.py
panopticon/: Cargo.toml
play/: Cargo.toml
pola/: Cargo.toml
polapy/: pyproject.toml
py3/: build.sh  pyproject.toml  run.sh
py3/fixtures/: test.avsc
py3/grpcdemo/: test_pb2.py  test_pb2_grpc.py
py3/grpcdemo/protos/: test.proto  test_pb2.py  test_pb2_grpc.py
pyarrow/: pyproject.toml
pyarrow/tests/: test_pyarrow.py
pyhttp/: pyproject.toml
pyhttp/src/pyhttp/: app.py
python/: async.py  dataclass.py  numpy_1.py  numpy_2.py  type.py
python-m/: run.sh
python-m/demo/: pyproject.toml
python-m/demo/hi/: __main__.py
qiskit-snippet/: .gitignore  bloch.py  pyproject.toml
qiskit-snippet/src/qiskit_snippet/: bloch.py
qomo/: Cargo.toml  LICENSE  README.md
quantum-snippet/: Cargo.toml
r/: Cargo.toml
randomized-algorithm/: Cargo.toml
raphtory-python/: README.md  pyproject.toml
raphtory-python/src/raphtory_python/: main.py
raphtory-rust/: Cargo.toml
rectangles/: Cargo.toml
ref-with-flag/: Cargo.toml
render-hex/: Cargo.toml
resolve/: Cargo.toml
rpg/: Cargo.toml
rpy/: pyproject.toml
rust-ml-book/: Cargo.toml
rust-snippet/: Cargo.toml
rust-snippet/src/: main.rs
rust-web/: Cargo.toml  Readme.md
rust-web/src/: domain.rs  entity.rs  handler.rs  main.rs  storage.rs
rust-web/src/account/: domain.rs  handler.rs  mod.rs  repository.rs
rust-web/src/domain/: account.rs
rust-web/src/entity/: account.rs  mod.rs
rust-web/src/handler/: account.rs
rust-web/src/migration/: mod.rs
rust-web/src/repository/: account.rs
rustry/: Cargo.toml
spawn-blocking/: Cargo.toml
substrate-node-hx/: Cargo.toml  README.md
substrate-node-hx/runtime/: Cargo.toml
substrate-node-hx/runtime/src/: lib.rs
substrate-node-hx/runtime/wasm/: Cargo.toml  build.sh
substrate-node-hx/runtime/wasm/src/: lib.rs
substrate-node-hx/src/: chain_spec.rs  main.rs  service.rs
test-python-m/: install.sh  requirements.txt  run.sh
test123/: Cargo.toml
train/: Cargo.toml
try-ballista/: Cargo.toml
try-data-fusion/: Cargo.toml
try-datafusion/: Cargo.toml
try-s2n-quic/: Cargo.toml  Readme.md
try-svelte-kit/: README.md  package.json  svelte.config.js
try-wasm/: Cargo.toml
try_phx/: README.md  mix.exs
tryd2l/: pyproject.toml
tryd2l/tests/: test_tryd2l.py
trykrustlet/: Cargo.toml
wasi-try/: Cargo.toml
wasm-proxy/: Cargo.toml
wasm-proxy-filter/: Cargo.toml
webcomponents/: package.json  tsconfig.json  tslint.json
write123/: Cargo.toml
zig-snippet/: build.zig  build.zig.zon
(+407 files in other folders)
