[tool.poetry]
name = "drl"
version = "0.1.0"
description = "Deep Reinforcement Learning"
authors = ["haoxin <haoxinst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylance = "0.4.12"
gymnasium = "0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
