[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = "1.4"
prost = "0.9"
rkyv = "0.7"
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"
