[workspace]

[package]
name = "loco_candle_inference"
version = "0.1.0"
edition = "2021"

[dependencies]

loco-rs = { version = "0.3", default-features = false, features = ["cli"] }
serde = "1"
serde_json = "1"
eyre = "0.6"
tokio = { version = "1", default-features = false }
async-trait = "0.1"

axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[[bin]]
name = "loco_candle_inference-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3"
rstest = "0.18"
loco-rs = { version = "0.3", default-features = false, features = [
  "testing",
  "cli",
] }
insta = { version = "1", features = ["redactions", "yaml", "filters"] }
