[tool.poetry]
name = "ml2022"
version = "0.1.0"
description = ""
authors = ["haoxin <haoxinst@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "2.7.0"
pandas = "1.4.1"
matplotlib = "3.5.1"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"

[tool.poetry.scripts]
start = "ml2022.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
