[tool.poetry]
name = "ml2022"
version = "0.1.0"
description = ""
authors = ["haoxin <haoxinst@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "2.8"
polars = "0.13"
matplotlib = "3.5"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[tool.poetry.scripts]
start = "ml2022.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
