[project]
name = "p"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "haoxin", email = "haoxinst@gmail.com" }
]
dependencies = [
    "gymnasium>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
