[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"

[dependencies]
ballista = "0.6"
datafusion = "7"
sea-orm = "0.5"
prost = "0.9"
rkyv = "0.7"
surf = "2"
tonic = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
