[tool.poetry]
name = "grpcdemo"
version = "0.1.0"
description = "Python demo: gRPC and Avro"
authors = ["Hao Xin <haoxinst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
grpcio-tools="^1.41"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
