[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["haoxin <haoxinst@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
pyarrow = "^6.0.0"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
main = "demo.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
