[project]
name = "pyhttp"
version = "0.1.0"
description = ""
authors = [
    { name = "haoxin", email = "haoxinst@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "robyn>=0.38.0",
    "uvloop>=0.17.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.0",
]

[tool.rye.scripts]
fmt = "black src"
app = "python src/pyhttp/app.py"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
