[project]
name = "qiskit-snippet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "qiskit>=1.1",
    "matplotlib>=3.9.1",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
bloch = "python3 src/qiskit_snippet/bloch.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qiskit_snippet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
