[project]
name = "raphtory-python"
version = "0.1.0"
description = ""
authors = [
    { name = "haoxin", email = "haoxinst@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.rye.scripts]
fmt = "ruff check --fix ."
app = "python src/raphtory_python/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/raphtory_python"]
