[project]
name = "raphtory-python"
version = "0.1.0"
description = ""
authors = [
    { name = "haoxin", email = "haoxinst@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "raphtory>=0.8",
    "polars>=0.20",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.rye.scripts]
app = "python src/raphtory_python/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/raphtory_python"]
