[tool.poetry]
name = "tryd2l"
version = "0.1.0"
description = ""
authors = ["haoxin <haoxinst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
d2l = "^0.17.3"
tensorflow = "2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
