[tool.poetry]
name = "hi"
version = "0.3.6"
description = "Hello"
authors = ["haoxin <haoxinst@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
