[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-node-hx-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.substrate-node-hx-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-node-hx-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'
